# DASHSys

./: .gitignore  MANIFEST.md  README_SUBMISSION.md
source_code/: .env.example  README.md  pyproject.toml  requirements.txt
source_code/configs/: api_catalog.yml  planner_rules.yml  schema_synonyms.yml  scoring.yml
source_code/prompts/: answer_prompt.j2  json_repair_prompt.j2  plan_selector_prompt.j2  system_prompt_template.md.j2
source_code/schemas/: api_call.schema.json  metadata.schema.json  trajectory.schema.json
source_code/scripts/: run_eval.ps1  setup.ps1
source_code/src/dashsys_agent/: cli.py  config.py  paths.py  utils.py
source_code/src/dashsys_agent/api/: auth.py  catalog.py  client_base.py  edge_cases.py  health.py  mock_client.py  real_client.py  request_adapter.py  sanitize.py
source_code/src/dashsys_agent/db/: duckdb_client.py  join_graph.py  parquet_loader.py  schema_catalog.py
source_code/src/dashsys_agent/evals/: ablate.py  compare_results.py  eval_samples.py  load_samples.py  normalize_api.py  normalize_sql.py  report.py  run_test_set.py  score_answers.py
source_code/src/dashsys_agent/llm/: json_client.py  lmstudio_client.py  metrics.py
source_code/src/dashsys_agent/nlp/: entity_extractor.py  fuzzy_match.py  normalize.py
source_code/src/dashsys_agent/planning/: candidate_plans.py  deterministic_planner.py  intent_router.py  llm_plan_selector.py
source_code/src/dashsys_agent/runtime/: answer_builder.py  artifact_writer.py  evidence.py  executor.py  logging.py  metadata_builder.py  trajectory.py
test_artifacts/prompts/: test_001.md  (+59 more)
(+124 files in other folders)
